# Shyam-Uniba

./: AllSi_shifter.sh  FastSilicon.C  Fun4All_G4_Baseline2_p.C  Fun4All_G4_Baseline2_pt.C  Fun4All_G4_HybridGEM.C  Plot_P_eta.C  Plot_Pt_eta.C  README.md  Resolution_Gaus.C  Resolution_Tracker.C  Test.C  build.sh  create_Indianflag.C  draw_geom.C  mom_resol_tpc.C  mom_resol_tracker.C  mom_resol_tracker_eta.C  mom_resol_tracker_eta_hits.C  mom_resol_tracker_general.C  mom_resol_tracker_new.C  ms_tracker.C  root.sh  run_Shyam.sh  run_Shyam1.sh  run_Shyam_p.sh  run_pythia.sh  start.sh
ATHENA_Circle/: Circle_Intersection.h  Script.sh  Script_myvideo.sh  fitCircle.C  fitCircle_myvideo.C
ATHENA_Tracking_GEM/: Fun4All_G4_Baseline2.C  Fun4All_G4_HybridGEM.C  Fun4All_G4_ProjectiveHybrid.C  G4HitNtuple.root  TEST_ATHENA0507_G4GEM.root  _ATHENA0507_FastSimEval.root  _ATHENA0507_G4GEM.root  detector_setup.h  run_Shyam.sh
ATHENA_Tracking_GEM_final/: Fun4All_G4_Baseline2.C  G4HitNtuple.root  G4_GridPix.C  SimuCondor.sh  _ATHENA0507_FastSimEval.root  _ATHENA0507_G4GEM.root  detector_setup.h  out_ATHENA0507_FastSimEval.root  out_ATHENA0507_G4GEM.root  run_hybrid_gem.sh  runningScript.sh  simple_geom.gdml  vis.mac
ATHENA_Tracking_GEM_working/: Fun4All_G4_Baseline2.C  Fun4All_G4_Baseline2_D0.C  Fun4All_G4_Baseline2_p.C  Fun4All_G4_Baseline2_pt.C  Fun4All_G4_Baseline2_pythia8.C  Fun4All_G4_ProjectiveHybridNew.C  G4History.macro  G4HitNtuple.root  G4_DummymRICH.C  G4_GEM_EIC_v1.C  G4_Pipe_EIC.C  README.md  _ATHENA0507_FastSimEval.root  (+11 more)
MakeExample/cmake/: CMakeLists.txt  main.cc
(+802 files in other folders)
